# squalodon

./: Cargo.toml  README.md
.github/workflows/: build.yml
squalodon/: Cargo.toml
squalodon-cli/: Cargo.toml
squalodon-cli/src/: main.rs  rocks.rs
squalodon/examples/: example.rs
squalodon/src/: builtin.rs  catalog.rs  connection.rs  executor.rs  lexer.rs  lib.rs  memcomparable.rs  optimizer.rs  parser.rs  planner.rs  rows.rs  storage.rs  types.rs
squalodon/src/builtin/: aggregate_function.rs  scalar_function.rs  table_function.rs
squalodon/src/catalog/: function.rs  index.rs  sequence.rs  table.rs  view.rs
squalodon/src/executor/: aggregate.rs  ddl.rs  expression.rs  filter.rs  join.rs  limit.rs  modification.rs  mutation.rs  project.rs  query.rs  scan.rs  sort.rs  union.rs
squalodon/src/optimizer/: join.rs
squalodon/src/parser/: ddl.rs  expression.rs  lexer.rs  modification.rs  mutation.rs  query.rs
squalodon/src/planner/: aggregate.rs  binder.rs  column.rs  ddl.rs  explain.rs  expression.rs  filter.rs  join.rs  limit.rs  modification.rs  mutation.rs  project.rs  query.rs  scan.rs  sort.rs  union.rs
squalodon/src/storage/: blackhole.rs  index.rs  memory.rs  sequence.rs  table.rs
squalodon/tests/: sqllogictest.rs
squalodon/tests/slt/: README.md  order_by.slt
squalodon/tests/slt/bustub/: baby_arithmetic.slt  fixtures.slt.inc  p0.01-lower-upper.slt  p0.03-string-scan.slt  p3.00-primer.slt  p3.01-seqscan.slt  p3.02-insert.slt  p3.03-update.slt  p3.04-delete.slt  p3.05-index-scan.slt  p3.06-empty-table.slt  p3.07-simple-agg.slt  p3.08-group-agg-1.slt  p3.09-group-agg-2.slt  p3.10-simple-join.slt  p3.11-multi-way-join.slt  p3.12-repeat-execute.slt  p3.13-nested-index-join.slt  p3.14-hash-join.slt  p3.15-multi-way-hash-join.slt  p3.16-sort-limit.slt  p3.17-topn.slt  p3.18-integration-1.slt  p3.19-integration-2.slt  p3.leaderboard-q1.slt.slow  p3.leaderboard-q2.slt.slow  p3.leaderboard-q4.slt  update.slt
squalodon/tests/slt/peloton/: aggregate.slt  aggregate_groupby.slt  analyze.slt  case.slt  delete.slt  distinct.slt  distinct_aggregate.slt  drop.slt  index_scan.slt  insert.slt  is_null.slt  optimizer.slt  order_by.slt  projection.slt  string_functions.slt  type.slt  update.slt  (+2 more)
src/: catalog.rs  executor.rs  lib.rs  main.rs  memcomparable.rs  parser.rs  planner.rs  serde.rs  storage.rs  types.rs
src/parser/: lexer.rs
src/planner/: binder.rs
src/storage/: catalog.rs  memory.rs  rocks.rs  schema.rs  transaction.rs
(+9 files in other folders)
