[package]
name = "squalodon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bincode = "1.3.3"
crossbeam-skiplist = "0.1.3"
rustyline = "14.0.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
unicode-width = "0.1.11"

[lints.clippy]
nursery = "warn"
missing_const_for_fn = { level = "allow", priority = 1 }
significant_drop_in_scrutinee = { level = "allow", priority = 1 }
significant_drop_tightening = { level = "allow", priority = 1 }

pedantic = "warn"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
struct_field_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
