[package]
name = "squalodon-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
csv = "1.3.0"
rocksdb = { version = "0.22.0", optional = true }
rustyline = "14.0.0"
squalodon = { path = "../squalodon" }
unicode-width = "0.1.13"

[features]
rocksdb = ["dep:rocksdb"]
